--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,7 @@ spring:
     defer-datasource-initialization: true
   datasource:
     url: jdbc:h2:mem:testdb
+    sql-script-encoding: UTF-8
   h2:
     console:
       enabled: true
